--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^18.0.0",
         "react-hook-form": "^7.0.0",
         "react-router-dom": "^6.0.0",
+        "uuid": "^13.0.0",
         "zod": "^3.0.0",
         "zustand": "^4.0.0"
     },
