--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.0.0",
         "clsx": "^1.0.0",
+        "dotenv": "^17.2.3",
         "jspdf": "^3.0.3",
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.545.0",
