--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@supabase/supabase-js": "^2.0.0",
+        "@supabase/auth-helpers-react": "^0.5.0",
+        "@supabase/supabase-js": "^2.75.0",
         "clsx": "^1.0.0",
         "dotenv": "^17.2.3",
         "jspdf": "^3.0.3",
