Boiler Plate all done and let's now build the backend file

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,27 @@
+# ======================================================
+# SGSS Medical Fund - Django Environment Configuration
+# ======================================================
+
+# 🔧 Django Environment
 DEBUG=True
-SECRET_KEY=your_secret_key_here
-DATABASE_URL=postgresql://postgres:Netsj@kma3108j@db.fbouoobwualsynjrmkos.supabase.co:5432/postgres
+SECRET_KEY=django-insecure-t1o5o)6bxvu1)!$o4yw7vlweb(p7u@2q-6!b^q*%b6q@w^a@&e
+
+# 🌐 Allowed Hosts (comma-separated)
+ALLOWED_HOSTS=127.0.0.1,localhost
+
+# 💾 Database Configuration (local PostgreSQL)
+DATABASE_URL=postgres://postgres:km@3108j@localhost:5432/Sgss_medical_fund
+
+# 🕒 Timezone
+TIME_ZONE=Africa/Nairobi
+
+# 📬 Email Settings (optional — used later for notifications)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_HOST_USER=your_email@gmail.com
+# EMAIL_HOST_PASSWORD=your_password
+# EMAIL_USE_TLS=True
+
+# 🧠 Misc (future extensions)
+ENVIRONMENT=development
