--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,10 +23,12 @@
     "axios": "^1.9.0",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^17.0.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
+    "framer-motion": "^12.23.24",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/date-fns": "^2.5.3",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.0",
     "@types/react": "^19.1.2",
