--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.23.24",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
