--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-table": "^8.21.3",
     "antd": "^5.26.0",
