--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,6 +37,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.4.1",
     "serverless-http": "^3.2.0",
     "yup": "^1.6.1"
   },
