feat: enhance Dockerfile for improved dependency management and add gunicorn for production server feat: implement PaymentService for handling payment interactions and claim payouts refactor: streamline claim calculation logic for better readability feat: add email configuration based on environment settings feat: update ClaimReviewViewSet to trigger payouts upon claim approval

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,21 +6,30 @@
 FROM python:3.12-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
-# Create app directory
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy project files
-COPY . .
+# Install python dependencies
+COPY requirements.txt /app/
+RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install gunicorn
+
+# Copy project
+COPY . /app/
+
+# Collect static files (requires SECRET_KEY to be set during build or by dummy)
+RUN SECRET_KEY=dummy python manage.py collectstatic --noinput
 
 # Expose port
 EXPOSE 8000
 
-# Run migrations and start Django
-CMD ["bash", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+# Run gunicorn
+CMD ["gunicorn", "--config", "gunicorn.conf.py", "sgss_medical_fund.wsgi:application"]
