--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/sgss_medical_fund
 ALLOWED_HOSTS=127.0.0.1,localhost
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173
 CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173
+
+# Frontend
+VITE_API_URL=http://localhost:8000/api/
