feat: Add initial Django project setup with comprehensive settings, environment configuration, and `medical` app scaffolding.

--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,274 @@
 # ===================================
 # SGSS Medical Fund Portal - Environment Configuration
 # ===================================
+# Copy this file to .env and update with your actual values
+# NEVER commit .env to version control!
 
-# Django Settings
+# ===================================
+# DJANGO CORE SETTINGS
+# ===================================
+
+# SECURITY WARNING: Set to False in production!
 DEBUG=True
-SECRET_KEY=your-secret-key-here-generate-a-secure-random-string
 
-# Database Configuration
-# For local development:
+# SECURITY WARNING: Generate a strong secret key for production
+# Generate with: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+SECRET_KEY=your-secret-key-here-generate-a-secure-random-string-50-plus-characters
+
+# ===================================
+# DATABASE CONFIGURATION
+# ===================================
+
+# For local development (SQLite):
+# DATABASE_URL=sqlite:///db.sqlite3
+
+# For PostgreSQL (recommended for production):
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/sgss_medical_fund
-# NOTE: If your password contains special characters, URL-encode them
-# Example: @ becomes %40, # becomes %23, etc.
 
-# Allowed Hosts (comma-separated)
+# NOTE: If your password contains special characters, URL-encode them
+# Examples: @ becomes %40, # becomes %23, : becomes %3A, / becomes %2F
+# Use this tool: https://www.urlencoder.org/
+
+# ===================================
+# ALLOWED HOSTS & DOMAINS
+# ===================================
+
+# Comma-separated list of allowed hosts
+# Development:
 ALLOWED_HOSTS=127.0.0.1,localhost
 
-# CORS and CSRF Settings (comma-separated origins)
+# Production example:
+# ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com,api.yourdomain.com
+
+# ===================================
+# CORS & CSRF SETTINGS
+# ===================================
+
+# Comma-separated origins allowed to make requests
+# Development (include both Vite ports):
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173
+
+# Production example:
+# CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# Comma-separated trusted origins for CSRF
+# Development:
 CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173
 
-# Security Settings (set to True in production)
+# Production example:
+# CSRF_TRUSTED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# ===================================
+# SECURITY SETTINGS (Production Only)
+# ===================================
+
+# Set to True in production when using HTTPS
 CSRF_COOKIE_SECURE=False
 SESSION_COOKIE_SECURE=False
 
-# Time Zone
+# Production values:
+# CSRF_COOKIE_SECURE=True
+# SESSION_COOKIE_SECURE=True
+
+# ===================================
+# TIME ZONE
+# ===================================
+
+# Set to your local timezone
 TIME_ZONE=Africa/Nairobi
 
-# Email Configuration (for production)
+# Other examples:
+# TIME_ZONE=UTC
+# TIME_ZONE=America/New_York
+# TIME_ZONE=Europe/London
+
+# ===================================
+# FRONTEND CONFIGURATION
+# ===================================
+
+# Frontend URL for email links and redirects
+# Development:
+FRONTEND_URL=http://localhost:5173
+
+# Production example:
+# FRONTEND_URL=https://yourdomain.com
+
+# ===================================
+# EMAIL CONFIGURATION
+# ===================================
+
+# Email backend (console for dev, smtp for production)
+# Development: emails print to console
+# Production: emails sent via SMTP
+
+# --- SendGrid (Recommended for Production) ---
+# Free tier: 100 emails/day
+# Sign up: https://sendgrid.com/
 EMAIL_HOST=smtp.sendgrid.net
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST_USER=apikey
+EMAIL_HOST_PASSWORD=your_sendgrid_api_key_here
 DEFAULT_FROM_EMAIL=noreply@sgssmedicalfund.org
 
-# Frontend Configuration
-VITE_API_URL=http://localhost:8000/api/
+# --- Gmail (For Testing Only - Not Recommended for Production) ---
+# You need to enable "App Passwords" in Gmail settings
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USE_TLS=True
+# EMAIL_HOST_USER=your_email@gmail.com
+# EMAIL_HOST_PASSWORD=your_app_password_here
+# DEFAULT_FROM_EMAIL=your_email@gmail.com
+
+# --- Mailtrap (For Development/Testing) ---
+# Sign up: https://mailtrap.io/
+# EMAIL_HOST=smtp.mailtrap.io
+# EMAIL_PORT=2525
+# EMAIL_HOST_USER=your_mailtrap_username
+# EMAIL_HOST_PASSWORD=your_mailtrap_password
+# DEFAULT_FROM_EMAIL=noreply@sgssmedicalfund.org
+
+# --- AWS SES (For Production) ---
+# EMAIL_HOST=email-smtp.us-east-1.amazonaws.com
+# EMAIL_PORT=587
+# EMAIL_USE_TLS=True
+# EMAIL_HOST_USER=your_aws_ses_smtp_username
+# EMAIL_HOST_PASSWORD=your_aws_ses_smtp_password
+# DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+
+# ===================================
+# SENTRY ERROR TRACKING (Optional)
+# ===================================
+
+# Leave empty to disable Sentry
+# Sign up for free: https://sentry.io/
+# Free tier: 5,000 events/month
+SENTRY_DSN=
+
+# Production example:
+# SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
+
+# ===================================
+# AWS S3 STORAGE (Optional - Production)
+# ===================================
+
+# For storing media files (claim attachments, etc.)
+# Leave empty to use local filesystem
+# Sign up: https://aws.amazon.com/s3/
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=sgss-medical-fund
+AWS_S3_REGION_NAME=us-east-1
+
+# Production example:
+# AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
+# AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+# AWS_STORAGE_BUCKET_NAME=sgss-medical-fund-prod
+# AWS_S3_REGION_NAME=us-east-1
+
+# ===================================
+# CELERY & REDIS (Optional - Background Jobs)
+# ===================================
+
+# For background tasks like sending emails, generating reports
+# Redis is required for Celery
+# Install Redis: https://redis.io/download
+
+# Development (local Redis):
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Production example (Redis Cloud):
+# CELERY_BROKER_URL=redis://username:password@redis-host:6379/0
+# CELERY_RESULT_BACKEND=redis://username:password@redis-host:6379/0
+
+# ===================================
+# M-PESA INTEGRATION (Optional - Kenya)
+# ===================================
+
+# For automated reimbursement payments
+# Sign up: https://developer.safaricom.co.ke/
+
+MPESA_ENVIRONMENT=sandbox
+MPESA_CONSUMER_KEY=
+MPESA_CONSUMER_SECRET=
+MPESA_SHORTCODE=
+MPESA_PASSKEY=
+MPESA_INITIATOR_NAME=
+MPESA_SECURITY_CREDENTIAL=
+
+# Production example:
+# MPESA_ENVIRONMENT=production
+# MPESA_CONSUMER_KEY=your_consumer_key
+# MPESA_CONSUMER_SECRET=your_consumer_secret
+# MPESA_SHORTCODE=174379
+# MPESA_PASSKEY=your_passkey
+# MPESA_INITIATOR_NAME=your_initiator_name
+# MPESA_SECURITY_CREDENTIAL=your_security_credential
+
+# ===================================
+# PRODUCTION DEPLOYMENT CHECKLIST
+# ===================================
+
+# Before deploying to production, ensure:
+# [ ] DEBUG=False
+# [ ] Strong SECRET_KEY generated (50+ characters)
+# [ ] ALLOWED_HOSTS set to your domain
+# [ ] CSRF_COOKIE_SECURE=True
+# [ ] SESSION_COOKIE_SECURE=True
+# [ ] CORS_ALLOWED_ORIGINS set to your domain (HTTPS)
+# [ ] CSRF_TRUSTED_ORIGINS set to your domain (HTTPS)
+# [ ] Email service configured (SendGrid/SES)
+# [ ] Database backed up
+# [ ] SSL certificate installed
+# [ ] Static files collected (python manage.py collectstatic)
+# [ ] Migrations applied (python manage.py migrate)
+# [ ] Superuser created (python manage.py createsuperuser)
+# [ ] Firewall configured (UFW/iptables)
+# [ ] Monitoring set up (Sentry recommended)
+
+# ===================================
+# QUICK START GUIDE
+# ===================================
+
+# 1. Copy this file:
+#    cp .env.example .env
+
+# 2. Generate SECRET_KEY:
+#    python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+
+# 3. Update DATABASE_URL with your database credentials
+
+# 4. For production, update:
+#    - DEBUG=False
+#    - ALLOWED_HOSTS=yourdomain.com
+#    - CSRF_COOKIE_SECURE=True
+#    - SESSION_COOKIE_SECURE=True
+#    - Email settings (SendGrid recommended)
+
+# 5. Run migrations:
+#    python manage.py migrate
+
+# 6. Collect static files:
+#    python manage.py collectstatic
+
+# 7. Create superuser:
+#    python manage.py createsuperuser
+
+# 8. Start server:
+#    Development: python manage.py runserver
+#    Production: gunicorn sgss_medical_fund.wsgi:application
+
+# ===================================
+# SUPPORT & DOCUMENTATION
+# ===================================
+
+# Full deployment guide: See DEPLOYMENT_GUIDE.md
+# Security best practices: See SECURITY.md
+# Development setup: See DEVELOPMENT.md
+# Feature roadmap: See FEATURES_ROADMAP.md
+
+# For issues or questions:
+# Email: admin@sgssmedicalfund.org
+# GitHub: https://github.com/Jabrahamjohn/Sgssportal
