--- a/Backend/.env
+++ b/Backend/.env
@@ -15,13 +15,13 @@ DATABASE_URL=postgres://postgres:km@3108j@localhost:5432/Sgss_medical_fund
 # 🕒 Timezone
 TIME_ZONE=Africa/Nairobi
 
-# 📬 Email Settings (optional — used later for notifications)
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_HOST_USER=your_email@gmail.com
-# EMAIL_HOST_PASSWORD=your_password
-# EMAIL_USE_TLS=True
+# Email Configuration - Mailtrap (Testing)
 
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=f36667580aee98
+EMAIL_HOST_PASSWORD=85e8cdba923ab1
+DEFAULT_FROM_EMAIL=noreply@ajnetworkskenya.it.com
 # 🧠 Misc (future extensions)
 ENVIRONMENT=development
