feat: Initialize Django project with comprehensive API settings, CORS, DRF, environment variable management, and basic app URL configuration.

--- a/Backend/.env
+++ b/Backend/.env
@@ -17,11 +17,11 @@ TIME_ZONE=Africa/Nairobi
 
 # Email Configuration - Mailtrap (Testing)
 
-EMAIL_HOST='sandbox.smtp.mailtrap.io'
-EMAIL_PORT='2525'
+# Looking to send emails in production? Check out our Email API/SMTP product!
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_HOST_USER=9a067e5f56a56a
+EMAIL_HOST_PASSWORD=563e68ec758766
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER='74bd29e1011892'
-EMAIL_HOST_PASSWORD='5bc8028df425df'
-DEFAULT_FROM_EMAIL='noreply@ajnetworkskenya.it.com'
 # 🧠 Misc (future extensions)
 ENVIRONMENT=development
