feat: Implement medical fund membership management, member profile, and dependent APIs with corresponding dashboard UI.

--- a/Backend/.env
+++ b/Backend/.env
@@ -18,10 +18,11 @@ TIME_ZONE=Africa/Nairobi
 # Email Configuration - Mailtrap (Testing)
 
 # Looking to send emails in production? Check out our Email API/SMTP product!
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=2525
-EMAIL_HOST_USER=9a067e5f56a56a
-EMAIL_HOST_PASSWORD=563e68ec758766
+EMAIL_HOST=smtp.sendgrid.net
+EMAIL_PORT=587
+EMAIL_HOST_USER=apikey
+EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=True
+DEFAULT_FROM_EMAIL=jabrahamjohns@gmail.com
 # 🧠 Misc (future extensions)
-ENVIRONMENT=development
+ENVIRONMENT=Environment
